*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165728 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/Install.txt
+++ b/doc/Install.txt
@@ -17,8 +17,8 @@ To run the examples you must add the myfaces context to your Tomcat's configurat
 
         <!-- MyFaces Context -->
         <Context path="/myfaces" docBase="<myfaces-working-dir>/web" debug="0" privileged="true" reloadable="true">
-                                     <!-- |
-                                          Adjust to the path of your installation! -->
+                              <!--        |
+                                          +-- Adjust to the path of your installation! -->
           <Logger className="org.apache.catalina.logger.FileLogger"
                   prefix="localhost_myfaces_log." suffix=".txt" timestamp="true"/>
           <Loader checkInterval="5" className="org.apache.catalina.loader.WebappLoader"/>
