*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165739 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -1,7 +1,14 @@
-MyFaces TODO List
-=================
+MyFaces TODOs
+=============
 
-- state_save Tag: property "passOverToNewPages" (to give StateRenderer a hint if a saved
-                    state must be encoded into external links)
+Tasks
+-----
+You can browse all current task at:
+http://sourceforge.net/pm/?group_id=69709
 
-and many many more things...
+
+TODOs (HACKs, FIXMEs, ...)
+--------------------------
+Please use your editors search function to find all "TODO" occurrences...
+
+
