*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165820 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/Install.txt
+++ b/doc/Install.txt
@@ -25,7 +25,7 @@ To run the examples you must add the myfaces context to your Tomcat's configurat
         </Context>
 
 - (Re)start Tomcat
-- Enter "http://localhost:8080/myfaces" into the adress field of your browser and follow the link.
+- Enter "http://localhost:8080/myfaces/example/" into the adress field of your browser and follow the link.
 
 
 HOWTO - Use MyFaces in your own WebApp
