*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165822 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/Install.txt
+++ b/doc/Install.txt
@@ -4,7 +4,7 @@ MyFaces installation instructions
 What you need
 -------------
 - JDK 1.4.0 (or higher)
-- Tomcat 4.0.4 (get it from http://jakarta.apache.org/tomcat/index.html)
+- Tomcat 4.0.4 (or higher) (get it from http://jakarta.apache.org/tomcat/index.html)
 - JSF-API (get it from the "JavaServerTM Faces v1.0 Reference Implementation Early Access 2" at http://java.sun.com/j2ee/javaserverfaces/download.html)
 
 
