--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -2,6 +2,12 @@ MyFaces Release Notes
 =====================
 
 ----------------------------------------------------------------------
+Changes in Release 0.1.4
+
+* tons of adds, changes and fixes to better conform to the specification.
+* Patch to make javax.faces.webapp.FacesBodyTag work (see developer-notes).
+
+----------------------------------------------------------------------
 Changes in Release 0.1.3
 
 * new features
