*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165823 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -6,6 +6,7 @@ Changes in Release 0.1.4
 
 * tons of adds, changes and fixes to better conform to the specification.
 * Patch to make javax.faces.webapp.FacesBodyTag work (see developer-notes).
+* List- and GridRenderer, new sample pages
 
 ----------------------------------------------------------------------
 Changes in Release 0.1.3
