*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165829 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/example/org/apache/myfaces/example/example_messages_de.properties
+++ b/src/example/org/apache/myfaces/example/example_messages_de.properties
@@ -14,3 +14,7 @@ nav_Info            = Info
 nav_Contact         = Kontakt
 nav_Copyright       = Copyright
 nav_Options         = Einstellungen
+
+alt_logo = MyFaces - Die Opensource JSF Implementierung
+
+option_lang = Sprachauswahl
