--- a/src/example/org/apache/myfaces/example/example_messages_en.properties
+++ b/src/example/org/apache/myfaces/example/example_messages_en.properties
@@ -14,3 +14,8 @@ nav_Info            = Info
 nav_Contact         = Contact
 nav_Copyright       = Copyright
 nav_Options         = Options
+
+alt_logo = MyFaces - the open source JSF implementation
+
+option_lang = View this page in
+
