*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165846 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/example/org/apache/myfaces/example/example_messages_de.properties
+++ b/src/example/org/apache/myfaces/example/example_messages_de.properties
@@ -18,3 +18,4 @@ nav_Options         = Einstellungen
 alt_logo = MyFaces - Die Opensource JSF Implementierung
 
 option_lang = Sprachauswahl
+option_layout = Layout
