--- a/src/example/org/apache/myfaces/example/example_messages_en.properties
+++ b/src/example/org/apache/myfaces/example/example_messages_en.properties
@@ -18,4 +18,5 @@ nav_Options         = Options
 alt_logo = MyFaces - the open source JSF implementation
 
 option_lang = View this page in
+option_layout = Layout
 
