*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165851 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -3,7 +3,7 @@ MyFaces TODOs
 
 Tasks
 -----
-You can browse all current task at:
+You can browse all current tasks at:
 http://sourceforge.net/pm/?group_id=69709
 
 
