*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165864 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/example/org/apache/myfaces/examples/resource/example_messages_de.properties
+++ b/src/example/org/apache/myfaces/examples/resource/example_messages_de.properties
@@ -14,8 +14,31 @@ nav_Info            = Info
 nav_Contact         = Kontakt
 nav_Copyright       = Copyright
 nav_Options         = Einstellungen
+nav_Components      = Komponenten
+nav_Selectbox       = SelectBox
 
 alt_logo = MyFaces - Die Opensource JSF Implementierung
 
 option_lang = Sprachauswahl
 option_layout = Layout
+
+empty_selitem = Bitte auswählen ...
+
+#
+# components examples
+#
+label_cars = Modell
+label_colors = Farben
+label_extras = Extras
+button_calcprice = Preis berechnen
+msg_price = Ihr Preis: \u20AC\u00A0{0,number,##.00}
+color_black = schwarz
+color_blue = blau
+color_marine = Marine blau
+color_red = rot
+extra_aircond = Klima-Anlage
+extra_sideab = Seitenairbag
+extra_mirrowheat = Geheizte Aussenspiegel
+extra_leaderseat = Ledersitze
+
+
