--- a/src/example/org/apache/myfaces/examples/resource/example_messages_en.properties
+++ b/src/example/org/apache/myfaces/examples/resource/example_messages_en.properties
@@ -14,9 +14,34 @@ nav_Info            = Info
 nav_Contact         = Contact
 nav_Copyright       = Copyright
 nav_Options         = Options
+nav_Components      = Components
+nav_Selectbox       = SelectBox
+
 
 alt_logo = MyFaces - the open source JSF implementation
 
 option_lang = View this page in
 option_layout = Layout
+
+empty_selitem = Please select ...
+
+#
+# components examples
+#
+label_cars = Model
+label_colors = Colors
+label_extras = Extras
+button_calcprice = Calculate price
+msg_price = Your price: \u20AC\u00A0{0,number,#.##}
+color_black = black
+color_blue = blue
+color_marine = marine blue
+color_red = red
+extra_aircond = Aircondition
+extra_sideab = Sideairbag
+extra_mirrowheat = Heated Mirrors
+extra_leaderseat = Leatherseats
+
+
+
 
