--- a/src/example/org/apache/myfaces/examples/resource/example_messages_de.properties
+++ b/src/example/org/apache/myfaces/examples/resource/example_messages_de.properties
@@ -15,7 +15,7 @@ nav_Contact         = Kontakt
 nav_Copyright       = Copyright
 nav_Options         = Einstellungen
 nav_Components      = Komponenten
-nav_Selectbox       = SelectBox
+nav_Selectbox       = Selectboxen
 
 alt_logo = MyFaces - Die Opensource JSF Implementierung
 
