*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165868 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/example/org/apache/myfaces/examples/resource/example_messages_de.properties
+++ b/src/example/org/apache/myfaces/examples/resource/example_messages_de.properties
@@ -15,7 +15,7 @@ nav_Contact         = Kontakt
 nav_Copyright       = Copyright
 nav_Options         = Einstellungen
 nav_Components      = Komponenten
-nav_Selectbox       = Selectboxen
+nav_Selectbox       = Selectboxen (CarConfigurator)
 
 alt_logo = MyFaces - Die Opensource JSF Implementierung
 
@@ -31,7 +31,7 @@ label_cars = Modell
 label_colors = Farben
 label_extras = Extras
 button_calcprice = Preis berechnen
-msg_price = Ihr Preis: \u20AC\u00A0{0,number,##.00}
+msg_price = {0,choice,0#Stell dir dein Traumauto zusammen!|1< Dein Preis: \u20AC\u00A0{0}}
 color_black = schwarz
 color_blue = blau
 color_marine = Marine blau
