*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165872 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/example/org/apache/myfaces/examples/resource/example_messages_de.properties
+++ b/src/example/org/apache/myfaces/examples/resource/example_messages_de.properties
@@ -40,5 +40,8 @@ extra_aircond = Klima-Anlage
 extra_sideab = Seitenairbag
 extra_mirrowheat = Geheizte Aussenspiegel
 extra_leaderseat = Ledersitze
+discount_1 = Ich will den Treuerabatt
+
+
 
 
