--- a/src/example/org/apache/myfaces/examples/resource/example_messages_en.properties
+++ b/src/example/org/apache/myfaces/examples/resource/example_messages_en.properties
@@ -41,6 +41,7 @@ extra_aircond = Aircondition
 extra_sideab = Sideairbag
 extra_mirrowheat = Heated Mirrors
 extra_leaderseat = Leatherseats
+discount_1 = I want an aggregated rebate
 
 
 
