*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165878 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -6,6 +6,8 @@ Changes in Release 0.3.0
 
 * This is a major release, that has lots of changes to make MyFaces
   conform to the new EA3 specification.
+* UISortHeader with SortColumnRenderer (see features.html)
+* LayoutRenderer (see features.html)
 
 ----------------------------------------------------------------------
 Changes in Release 0.1.4
