*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165930 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -5,7 +5,7 @@ MyFaces Release Notes
 Changes in Release 0.3.1
 
 * completely restructured directories
-* revised doumentation
+* revised documentation
 * revised build files
 * 4 different state-saving modes: see features.html for details
 
