--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -2,6 +2,11 @@ MyFaces Release Notes
 =====================
 
 ----------------------------------------------------------------------
+Changes in Release 0.3.2
+
+* some serious bugs fixed (Tomcat 4.1.x issues)
+
+----------------------------------------------------------------------
 Changes in Release 0.3.1
 
 * completely restructured directories
