*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165942 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -5,6 +5,11 @@ MyFaces Release Notes
 Changes in Release 0.3.2
 
 * some serious bugs fixed (Tomcat 4.1.x issues)
+* UIFileUpload with FileUploadRenderer and FileUploadTag
+* added com.oreilly.servlet package cos.jar:
+   - Base64 encoding instead of MimeUtility from mail.jar
+   - MultiPartFilter for the new UIFileUpload
+* removed mail.jar: was only needed for Base64-Encoding
 
 ----------------------------------------------------------------------
 Changes in Release 0.3.1
