*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165943 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -16,6 +16,7 @@ nav_Copyright       = Copyright
 nav_Options         = Einstellungen
 nav_Components      = Komponenten
 nav_Selectbox       = Selectboxen (CarConfigurator)
+nav_FileUpload      = Datei hochladen
 
 alt_logo = MyFaces - Die Opensource JSF Implementierung
 
