*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165948 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -11,6 +11,9 @@ Changes in Release 0.3.2
    - Base64 encoding instead of MimeUtility from mail.jar
    - MultiPartFilter for the new UIFileUpload
 * removed mail.jar: was only needed for Base64-Encoding
+* "enabledOnUserRole" and "visibleOnUserRole" attributes for miscellaneous input
+  and command components
+* "setBundle" tag
 
 ----------------------------------------------------------------------
 Changes in Release 0.3.1
