*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165950 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/org/apache/myfaces/context/resource/FacesImplMessages_de.properties
+++ b/src/myfaces/org/apache/myfaces/context/resource/FacesImplMessages_de.properties
@@ -17,6 +17,7 @@
 #
 net.sourceforge.myfaces.convert.impl.BigDecimalConverter.EXCEPTION  = ERROR | Eingabefehler | Der eingegebene Wert ist keine gültige Zahl.
 net.sourceforge.myfaces.convert.impl.LongConverter.EXCEPTION        = ERROR | Eingabefehler | Der eingegebene Wert ist keine gültige Zahl.
+net.sourceforge.myfaces.convert.impl.IntegerConverter.EXCEPTION     = ERROR | Eingabefehler | Der eingegebene Wert ist keine gültige Zahl.
 net.sourceforge.myfaces.convert.impl.BooleanConverter.EXCEPTION     = ERROR | Eingabefehler | Could not convert '{0}' to Boolean.
 net.sourceforge.myfaces.convert.impl.DateConverter.EXCEPTION        = ERROR | Eingabefehler | Der eingegebene Wert ist kein gültiges Datum.
 net.sourceforge.myfaces.convert.impl.DateTimeConverter.EXCEPTION    = ERROR | Eingabefehler | Der eingegebene Wert ist keine gültige Datum/Zeit.
