*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165976 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -18,6 +18,7 @@ Changes in Release 0.3.2
 * "errors" tag renamed to "output_errors"
 * "image" tag renamed to "graphic_image"
 * "input_errors" tag was removed (see "output_errors")
+* Facet support (see KnownIssues.txt !)
 
 ----------------------------------------------------------------------
 Changes in Release 0.3.1
