*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165982 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -11,7 +11,7 @@ Changes in Release 0.3.2
    - Base64 encoding instead of MimeUtility from mail.jar
    - MultiPartFilter for the new UIFileUpload
 * removed mail.jar: was only needed for Base64-Encoding
-* web-application "tagunit" added, can be used for testing myfaces-taglibs
+* web-application "tagunit" added (only CVS), can be used for testing myfaces-taglibs
 * "enabledOnUserRole" and "visibleOnUserRole" attributes for miscellaneous input
   and command components
 * "setBundle" tag
