--- a/doc/Install.txt
+++ b/doc/Install.txt
@@ -5,25 +5,30 @@ What you need
 -------------
 - JDK 1.4.0 (or higher)
 - Tomcat 4.0.x (get it from http://jakarta.apache.org/tomcat/index.html)
-- JSF-API (get the jsf-api.jar from the "JavaServerTM Faces v1.0 Reference Implementation Early Access 3" at http://java.sun.com/j2ee/javaserverfaces/download.html)
+- JSF-API (get the jsf-api.jar from the "JavaServerTM Faces v1.0 Reference
+  Implementation Early Access 3" at
+  http://java.sun.com/j2ee/javaserverfaces/download.html)
 
 
 HOWTO - Run the Example-Application
 -----------------------------------
+- download and unpack myfaces-0.3.2-examples.tgz
 - see webapps/examples/doc/howto-run.txt
 
 HOWTO - Use MyFaces in your own WebApp
 --------------------------------------
-- Copy the file "jsf-api.jar" from the "JSF Reference Implementation EA 3" to the WEB-INF/lib dir of your (J2EE conform) Webapplication.
+- Copy the file "jsf-api.jar" from the "JSF Reference Implementation EA 3" to
+  the WEB-INF/lib dir of your (J2EE conform) Webapplication.
 - Copy the lib/myfaces.jar file to the WEB-INF/lib dir of your Webapplication.
-- Copy the lib/mail.jar file to the WEB-INF/lib dir of your Webapplication.
-- Configure your webapp's web.xml file. You can find a sample web.xml in the examples webapp.
+- Copy the lib/cos.jar file to the WEB-INF/lib dir of your Webapplication.
+- Configure your webapp's web.xml file (see web.xml.sample)
 - Add the line
     <%@ taglib uri="http://java.sun.com/jsf/html" prefix="h"%>
-    to your JSPs to be able to use the asic HTML JSF tags.
+  to your JSPs to be able to use the asic HTML JSF tags.
 - Add the line
     <%@ taglib uri="http://java.sun.com/jsf/core" prefix="f"%>
-    to your JSPs to be able to use the core JSF tags.
+  to your JSPs to be able to use the core JSF tags.
 - Add the line
-    <%@ taglib uri="http://myfaces.sourceforge.net/tld/myfaces_ext_0_3.tld" prefix="x"%>
-    to your JSPs to be able to use the myfaces extensions tags.
+    <%@ taglib uri="http://myfaces.sourceforge.net/tld/myfaces_ext_0_3.tld"
+               prefix="x"%>
+  to your JSPs if you want to be able to use the myfaces extensions tags.
