*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@165990 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -2,6 +2,10 @@ MyFaces Release Notes
 =====================
 
 ----------------------------------------------------------------------
+Changes in Release 0.3.3
+* Stylesheet support for navigation-menu along with implementing a lots of other common attributes
+
+----------------------------------------------------------------------
 Changes in Release 0.3.2
 
 * some serious bugs fixed (Tomcat 4.1.x issues)
