*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166000 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -4,6 +4,7 @@ MyFaces Release Notes
 ----------------------------------------------------------------------
 Changes in Release 0.3.3
 * Stylesheet support for navigation-menu along with implementing a lots of other common attributes
+* Validators added
 
 ----------------------------------------------------------------------
 Changes in Release 0.3.2
