--- a/src/myfaces/org/apache/myfaces/context/resource/FacesApiMessages_de.properties
+++ b/src/myfaces/org/apache/myfaces/context/resource/FacesApiMessages_de.properties
@@ -20,3 +20,19 @@ javax.faces.validator.DoubleRangeValidator.MAXIMUM  = ERROR | Validierungsfehler
 javax.faces.validator.DoubleRangeValidator.MINIMUM  = ERROR | Validierungsfehler | Wert ist kleiner als das erlaubte Minimum von {0}.
 javax.faces.validator.DoubleRangeValidator.TYPE     = ERROR | Validierungsfehler | Wert hat falschen Datentyp.
 
+javax.faces.validator.LengthValidator.LIMIT    = ERROR | Validierungsfehler | Maximum- oder Minimum-Attribut hat falschen Datentyp.
+javax.faces.validator.LengthValidator.MAXIMUM  = ERROR | Validierungsfehler | Wert übersteigt das erlaubte Maximum von {0}.
+javax.faces.validator.LengthValidator.MINIMUM  = ERROR | Validierungsfehler | Wert ist kleiner als das erlaubte Minimum von {0}.
+
+javax.faces.validator.RequiredValidator.FAILED= ERROR | Validierungsfehler | Eingabe erforderlich.
+
+javax.faces.validator.LongRangeValidator.LIMIT    = ERROR | Validierungsfehler | Maximum- oder Minimum-Attribut hat falschen Datentyp.
+javax.faces.validator.LongRangeValidator.MAXIMUM  = ERROR | Validierungsfehler | Wert übersteigt das erlaubte Maximum von {0}.
+javax.faces.validator.LongRangeValidator.MINIMUM  = ERROR | Validierungsfehler | Wert ist kleiner als das erlaubte Minimum von {0}.
+javax.faces.validator.LongRangeValidator.TYPE     = ERROR | Validierungsfehler | Wert hat falschen Datentyp.
+
+javax.faces.validator.StringRangeValidator.LIMIT    = ERROR | Validierungsfehler | Maximum- oder Minimum-Attribut hat falschen Datentyp.
+javax.faces.validator.StringRangeValidator.MAXIMUM  = ERROR | Validierungsfehler | Wert übersteigt das erlaubte Maximum von {0}.
+javax.faces.validator.StringRangeValidator.MINIMUM  = ERROR | Validierungsfehler | Wert ist kleiner als das erlaubte Minimum von {0}.
+javax.faces.validator.StringRangeValidator.TYPE     = ERROR | Validierungsfehler | Wert hat falschen Datentyp.
+
