--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -4,7 +4,7 @@ today = Heute ist der {0,date,short}.
 
 nav_Home            = Startseite
 nav_Examples        = Beispiele
-nav_Sample_1        = Beispiel 1
+nav_Sample_1        = Beispiel 1 (mit Validators)
 nav_Sample_2        = Beispiel 2
 nav_Simple_list     = Einfache Liste
 nav_Sortable_list   = Sortierbare Liste
