--- a/src/myfaces/org/apache/myfaces/context/resource/FacesImplMessages_de.properties
+++ b/src/myfaces/org/apache/myfaces/context/resource/FacesImplMessages_de.properties
@@ -22,3 +22,5 @@ net.sourceforge.myfaces.convert.impl.BooleanConverter.EXCEPTION     = ERROR | Ei
 net.sourceforge.myfaces.convert.impl.DateConverter.EXCEPTION        = ERROR | Eingabefehler | Der eingegebene Wert ist kein gültiges Datum.
 net.sourceforge.myfaces.convert.impl.DateTimeConverter.EXCEPTION    = ERROR | Eingabefehler | Der eingegebene Wert ist keine gültige Datum/Zeit.
 net.sourceforge.myfaces.convert.impl.TimeConverter.EXCEPTION        = ERROR | Eingabefehler | Der eingegebene Wert ist keine gültige Zeit.
+
+net.sourceforge.myfaces.renderkit.html.ErrorsRenderer.IN_FIELD      = INFO | \u0020in {0} |
