*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166034 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_en.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_en.properties
@@ -4,7 +4,7 @@ today = Today is the {0,date,short}.
 
 nav_Home            = Home
 nav_Examples        = Examples
-nav_Sample_1        = Sample 1 (width Validators)
+nav_Sample_1        = Sample 1 (with Validators)
 nav_Sample_2        = Sample 2
 nav_Simple_list     = Simple List
 nav_Sortable_list   = Sortable List
