--- a/doc/Install.txt
+++ b/doc/Install.txt
@@ -6,8 +6,7 @@ What you need
 - JDK 1.4.0 (or higher)
 - Tomcat 4.0.x (get it from http://jakarta.apache.org/tomcat/index.html)
 - JSF-API (get the jsf-api.jar from the "JavaServerTM Faces v1.0 Reference
-  Implementation Early Access 4" at
-  http://java.sun.com/j2ee/javaserverfaces/download.html)
+  Implementation Early Access 4" at http://java.sun.com/j2ee/javaserverfaces/download.html)
 
 
 HOWTO - Run the Example-Application
@@ -22,7 +21,7 @@ HOWTO - Use MyFaces in your own WebApp
 - Copy the lib/myfaces.jar file to the WEB-INF/lib dir of your Webapplication.
 - Copy the lib/cos.jar file to the WEB-INF/lib dir of your Webapplication.
 - Copy the conf/faces.properties file to your WEB-INF/classes directory
-- Configure your webapp's web.xml file (see web.xml.sample)
+- Configure your webapp's web.xml file (see conf/web.xml)
 - Add the line
     <%@ taglib uri="http://java.sun.com/jsf/html" prefix="h"%>
   to your JSPs to be able to use the basic HTML JSF tags.
