*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166050 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -2,6 +2,10 @@ MyFaces Release Notes
 =====================
 
 ----------------------------------------------------------------------
+Changes in Release 0.4.1
+* VariableResolverImpl resolves implicit objects
+
+----------------------------------------------------------------------
 Changes in Release 0.4.0
 * Many, many changes to catch up with current Spec. 1.0 PRD2 (= Early access release 4)
 
