--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -4,6 +4,8 @@ MyFaces Release Notes
 ----------------------------------------------------------------------
 Changes in Release 0.4.1
 * VariableResolverImpl resolves implicit objects
+* <navigation_item> does no longer have a treeId. Use action attribute and
+  appropriate NavigationRules instead.
 
 ----------------------------------------------------------------------
 Changes in Release 0.4.0
