*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166053 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -6,6 +6,8 @@ Changes in Release 0.4.1
 * VariableResolverImpl resolves implicit objects
 * <navigation_item> does no longer have a treeId. Use action attribute and
   appropriate NavigationRules instead.
+* fixed Tomcat 4.1.x Tag related issues
+* fixed FacesConfigEntityResolver to be more "compatible"
 
 ----------------------------------------------------------------------
 Changes in Release 0.4.0
