*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166061 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -9,6 +9,7 @@ Changes in Release 0.4.2
   by MinimizingStateSaver.
 * getValidator() in ApplicationImpl returned always the same validator
   instance: fixed.
+* Support for converter attributes "dateStyle", "formatPattern", etc.
 
 ----------------------------------------------------------------------
 Changes in Release 0.4.1
