*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166071 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -11,6 +11,9 @@ Changes in Release 0.4.2
   instance: fixed.
 * Support for converter attributes "dateStyle", "formatPattern", etc.
 * added Attribute activeItemClass to NavigationTag
+* replaced all usages of Class.forName(s) by Class.forName(s, true,
+  Thread.currentThread().getContextClassLoader()) to (hopefully) resolve the
+  JBoss issues
 
 ----------------------------------------------------------------------
 Changes in Release 0.4.1
