--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -11,6 +11,7 @@ Changes in Release 0.4.2
   instance: fixed.
 * Support for converter attributes "dateStyle", "formatPattern", etc.
 * added Attribute activeItemClass to NavigationTag
+* refurbished navigation menu in examples application
 * replaced all usages of Class.forName(s) by Class.forName(s, true,
   Thread.currentThread().getContextClassLoader()) to (hopefully) resolve the
   JBoss issues
