*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166078 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -5,6 +5,7 @@ MyFaces Release Notes
 Changes in Release 0.4.3
 * fixed a bug in the navigation menu: open/active state was lost sometimes.
 * removed Attribute levelClasses from NavigationTag - see NavigationRenderer.indent(...)
+* TextRenderer: empty <span> element (span without attributes) is not rendered anymore
 
 ----------------------------------------------------------------------
 Changes in Release 0.4.2
