*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166080 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -5,6 +5,9 @@ MyFaces Release Notes
 Changes in Release 0.4.3
 * fixed a bug in the navigation menu: open/active state was lost sometimes.
 * removed Attribute levelClasses from NavigationTag - see NavigationRenderer.indent(...)
+* Replaced usages of ObjectInputStream by the new derived class
+  MyFacesObjectInputStream to finally fix the JBoss Class.forName issue
+  --> MyFaces now works in JBoss 3.2.1 (thanks to Robert Gothan!)
 * TextRenderer: empty <span> element (span without attributes) is not rendered anymore
 
 ----------------------------------------------------------------------
