--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -9,6 +9,7 @@ Changes in Release 0.4.3
   MyFacesObjectInputStream to finally fix the JBoss Class.forName issue
   --> MyFaces now works in JBoss 3.2.1 (thanks to Robert Gothan!)
 * TextRenderer: empty <span> element (span without attributes) is not rendered anymore
+* New configuration option "defaultLanguage" in MyFacesConfig
 
 ----------------------------------------------------------------------
 Changes in Release 0.4.2
