*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166086 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -17,6 +17,8 @@ nav_Options         = Einstellungen
 nav_Components      = Komponenten
 nav_Selectbox       = Selectboxen (CarConfigurator)
 nav_FileUpload      = Datei hochladen
+nav_TabbedPane      = Karteireiter
+
 
 alt_logo = MyFaces - Die Opensource JSF Implementierung
 
