*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166098 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -10,6 +10,7 @@ Changes in Release 0.4.3
   --> MyFaces now works in JBoss 3.2.1 (thanks to Robert Gothan!)
 * TextRenderer: empty <span> element (span without attributes) is not rendered anymore
 * New configuration option "defaultLanguage" in MyFacesConfig
+* New Renderer "TabbedPane" that renderes a swing-like tabbed Pane.
 
 ----------------------------------------------------------------------
 Changes in Release 0.4.2
