--- a/doc/Install.txt
+++ b/doc/Install.txt
@@ -4,7 +4,7 @@ MyFaces installation instructions
 What you need
 -------------
 - JDK 1.4.0 (or higher)
-- Tomcat 4.0.x (get it from http://jakarta.apache.org/tomcat/index.html)
+- Tomcat 4.0.x or 4.1.x (get it from http://jakarta.apache.org/tomcat/index.html)
 - JSF-API (get the jsf-api.jar from the "JavaServerTM Faces v1.0 Reference
   Implementation Early Access 4" at http://java.sun.com/j2ee/javaserverfaces/download.html)
 
