--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -10,7 +10,7 @@ Changes in Release 0.4.3
   --> MyFaces now works in JBoss 3.2.1 (thanks to Robert Gothan!)
 * TextRenderer: empty <span> element (span without attributes) is not rendered anymore
 * New configuration option "defaultLanguage" in MyFacesConfig
-* New Renderer "TabbedPane" that renderes a swing-like tabbed Pane.
+* New Renderer "TabbedPane" that renderes a swing-like tabbed Pane (see examples).
 * Rudimentary support for <jsp:include>. See known issues for details.
 * fixed bug in ListRenderer: there was a bug when calculating actualRow
 
