--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -2,6 +2,10 @@ MyFaces Release Notes
 =====================
 
 ----------------------------------------------------------------------
+Changes in Release 0.4.4
+
+
+----------------------------------------------------------------------
 Changes in Release 0.4.3
 * fixed a bug in the navigation menu: open/active state was lost sometimes.
 * removed Attribute levelClasses from NavigationTag - see NavigationRenderer.indent(...)
