--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -3,7 +3,7 @@ MyFaces Release Notes
 
 ----------------------------------------------------------------------
 Changes in Release 0.4.4
-
+* added "rendererType" attribute to tag library for all components.
 
 ----------------------------------------------------------------------
 Changes in Release 0.4.3
