*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166167 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -4,6 +4,7 @@ MyFaces Release Notes
 ----------------------------------------------------------------------
 Changes in Release 0.4.4
 * added "rendererType" attribute to tag library for all components.
+* added RadioRenderer & selectone_radio tag (see carconfigurator example)
 
 ----------------------------------------------------------------------
 Changes in Release 0.4.3
