--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -34,7 +34,7 @@ label_cars = Modell
 label_colors = Farben
 label_extras = Extras
 button_calcprice = Preis berechnen
-msg_price = {0,choice,0#Stell dir dein Traumauto zusammen!|1< Dein Preis: \u20AC\u00A0{0}}
+msg_price = {0,choice,0#Stell dir dein Traumauto zusammen!|1< Dein Preis: \u20AC\u00A0{0,number,#0.00}}
 color_black = schwarz
 color_blue = blau
 color_marine = Marine blau
@@ -43,7 +43,10 @@ extra_aircond = Klima-Anlage
 extra_sideab = Seitenairbag
 extra_mirrowheat = Geheizte Aussenspiegel
 extra_leaderseat = Ledersitze
+discount_0 = Ich will keinen Rabatt
 discount_1 = Ich will den Treuerabatt
+discount_2 = Ich will den Großkundenrabatt
+
 
 
 
