--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_en.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_en.properties
@@ -43,7 +43,10 @@ extra_aircond = Aircondition
 extra_sideab = Sideairbag
 extra_mirrowheat = Heated Mirrors
 extra_leaderseat = Leatherseats
+discount_0 = I want no rebate
 discount_1 = I want an aggregated rebate
+discount_2 = I want a corporate client rebate
+
 
 
 
